# cloud-api

./: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py
src/app/: app.py  config.py
src/app/controllers/: api_controller.py  auth_controller.py
src/app/models/: scan_result.py  user.py
src/app/plugins/: custom_plugin.py
src/app/services/: api_service.py  auth_service.py  report_service.py
src/database/: init_db.sql
src/ui/: package.json  webpack.config.js
src/ui/public/: index.html
src/ui/public/styles/: main.css
src/ui/src/: App.js  index.js  routes.js
src/ui/src/components/: Footer.js  Header.js
